Fixed bug #61605 header_remove() does not remove all headers